--- a/WickedWebApi/WickedWebApi/Views/Admin/UploadDocument.cshtml
+++ b/WickedWebApi/WickedWebApi/Views/Admin/UploadDocument.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-    @using (Html.BeginForm("UploadGroupTable", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("UploadTimeTable", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
     { 
         <input type="file" name="file" />
         <input type="submit" name="Submit" id="Submit" value="Upload" />
